by wrapping 'Elle Pope' in <div> I was able to style it to width: 0, overflow: visible, and the 'Elle Pope' <p> tag with it's own width to fix issues menu grow animation was having. Menu would grow and then shrink for the elements were overlapping at smaller media queries. Shrunk the Nav animation from 20em to 15em. Fit nicer. Formatted the menu links to fit within this nav cirle. Formatted to match curve.

--- a/wireframe.css
+++ b/wireframe.css
@@ -63,17 +63,31 @@ nav ul{
 
 #hamburger{
 	display: none; 
-	text-align: center; 
-	margin-top: .2em;
+	padding: .2em;
 	cursor: pointer;
 }
 
-#hamburger img {width: 80%;}
+#hamburger img {display: block; width:1.5em; height: 1.5em;}
 
 @media all and (max-width: 35.7em) {
+	header div {width: 0; overflow: visible;}
+	header>div p {width: 90vw;}
+	
 	nav ul {
 		display: none;
+		position: relative;
+		top: 2.5em;
+		left: 2em;
+		font-size: 1.1em;
 	}
+	
+	nav>ul li {
+		margin: 1em 0;
+	}
+	
+	nav>ul li:first-child {margin-left: 1.2em;}
+	nav>ul li:nth-child(3) {margin-left: .3em;}
+	nav>ul li:nth-child(4) {margin-left: 2.3em;}
 	
 	nav {
 		position: relative;
@@ -82,6 +96,7 @@ nav ul{
 		min-width: 2em;
 		border-radius: 50em;
 		background-color: #919191;
+		overflow: visible;
 	}
 
 	@keyframes menuGrow {
@@ -92,8 +107,8 @@ nav ul{
 			right: .15em;
 		}
 		100% {
-			width: 20em; 
-			height: 20em;
+			width: 15em; 
+			height: 15em;
 			top: 4em;
 			right: -5em;
 		}
@@ -101,16 +116,18 @@ nav ul{
 	
 	nav:hover {
 		animation: .3s ease-out 0s 1 normal none running menuGrow;
-		width: 20em;
-		height: 20em;
+		width: 15em;
+		height: 15em;
 		top: 4em;
 		right: -5em;
 	}
 	
 	nav:hover #hamburger {display: none;}
-	nav:hover ul {display: block;}
+	nav:hover ul {
+		display: block;
+	}
 	
-	#hamburger{display:block;}
+	#hamburger{display: block;}
 }
 
 /*============================================*/
